--- a/style.css
+++ b/style.css
@@ -55,8 +55,7 @@ h1 {
   font-size: 20px;
   color: rgba(94, 35, 100, 0.938);
   margin: 25px auto;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Playfair Display", serif;
 }
 p {
   font-family: "Itim", cursive;
